# cartograph-desktop-plugin

./: .gitignore  README.md
api/: cartographmapfileinterface.h  cartographmapinterface.h  cartographmaplistinterface.h  cartographoptioninterface.h  cartographplugin.h  cartographplugininterface.h
examples/qtmaplistplugin/: .gitignore  CMakeLists.txt  README.md  qtmaplistplugin.cpp  qtmaplistplugin.h
examples/vsmapfileplugin/: README.md  vsmapplugin.sln  vsmapplugin.vcxproj  vsmapplugin.vcxproj.filters  vsplugin.cpp  vsplugin.h
examples/vsmaplistplugin/: README.md  vsmapplugin.vcxproj  vsplugin.cpp  vsplugin.h
